--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,121 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.load{
-    border-top-color: #333;
-    border: 5px solid #ddd;
-    animation: loader infinite 1s;
+body {
+  background: #000;
+  color: white;
+  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-@keyframes loader {
-    100%{
-        rotate: 360deg;
-        border-top-color: black;
+*::-webkit-scrollbar {
+  width: 8px;
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  width: 100%;
+  background-color: white;
+  border-radius: 6rem;
+}
+
+.after::after {
+  content: "";
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.w-fix {
+  width: 75vw;
+}
+
+.h-calc {
+  height: calc(100vh - 5rem);
+}
+
+.tosscoin {
+  margin: 2rem;
+  position: relative;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transition: all 0.5s;
+  > div {
+    border-radius: 50%;
+    position: absolute;
+    display: grid;
+    place-items: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    backface-visibility: hidden;
+    filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.521));
+    &:first-of-type {
+      background-image: url("../assets/heads.png");
     }
+    &:last-of-type {
+      background-image: url("../assets/tails.png");
+      transform: rotateY(-180deg);
+    }
+  }
+}
+
+.coupon-form {
+  display: grid 2fr 1fr, 2rem;
+  max-width: 30rem;
+  width: 100%;
+  > input {
+    padding: 1rem;
+    /* border: 1px solid rgba(0, 0, 0, 0.359); */
+    outline: none;
+  }
+
+  > fieldset {
+    padding: 1rem;
+    border: 1px solid white;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    grid-column: 1/3;
+
+    span {
+      font-size: 0.8rem;
+      font-weight: 300;
+      margin-inline-start: 0.25rem;
+      margin-inline-end: 1rem;
+    }
+  }
+
+  > button {
+    font-weight: 700;
+    font-size: 1.1rem;
+    width: 100%;
+    padding: 1rem;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin: 2rem 0;
+    border-radius: 10px;
+    grid-column: 1/3;
+    background-color: rgb(0, 98, 255);
+  }
+}
+
+.sidebar::-webkit-scrollbar {
+  display: flex;
+  width: 10px;
+  background-color: rgb(67, 67, 67);
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 30px;
+  cursor: pointer;
 }
